JWT Authentication completed

--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -1,3 +1,5 @@
 <h5>{{resultMessage}}</h5>
 <button (click)="logInWithGoogle('Google')"> Google Login </button>
-<button  (click)="signOut()" class="btn btn-success Facebook">Sign Out</button>
+<button  (click)="logOut()" class="btn btn-success Facebook">Sign Out</button>
+<button  (click)="getMovies()" class="btn btn-success Facebook">GetMovies</button>
+
