Completed basic function with JWT Auth

--- a/ClientApp/src/app/Component/add-movie/add-movie.component.html
+++ b/ClientApp/src/app/Component/add-movie/add-movie.component.html
@@ -1,9 +1,9 @@
-<mat-card>
+<mat-card >
     <mat-card-header>
         <mat-card-title>Add Movie</mat-card-title>
     </mat-card-header>
     <form  #MovieAdd="ngForm" (ngSubmit)="onClickSubmit()">
-        <mat-card-content>
+        <mat-card-content >
          
                 <mat-form-field>
                     <mat-label>Movie Name</mat-label>
@@ -25,9 +25,9 @@
                 <mat-form-field>
                     <mat-label>Genre</mat-label>
                     <mat-select [(value)]="movie.genres" name="movieGenre" placeholder="Genre">
-                        <mat-option value="email">Action</mat-option>
-                        <mat-option value="website">Comedy</mat-option>
-                        <mat-option value="direct">Horror</mat-option>
+                        <mat-option value="Action">Action</mat-option>
+                        <mat-option value="Comedy">Comedy</mat-option>
+                        <mat-option value="Horror">Horror</mat-option>
                     </mat-select>
                 </mat-form-field>
                 <br>
@@ -44,7 +44,7 @@
 
         </mat-card-content>
         <mat-card-actions>
-            <button md-button class="submit-btn" type="submit" [disabled]="!MovieAdd.form.valid">Save Movie</button>
+            <button md-button class="submit-btn btn btn-success" type="submit" [disabled]="!MovieAdd.form.valid">Save Movie</button>
         </mat-card-actions>
     </form>
     </mat-card>
