--- a/ClientApp/src/app/Component/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/Component/nav-menu/nav-menu.component.html
@@ -27,15 +27,8 @@
           >
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+          <li class="nav-item" >
+            <a class="nav-link text-dark" (click)="logOut()">Sign Out</a>
           </li>
         </ul>
       </div>
